--- a/infra-heat.yaml
+++ b/infra-heat.yaml
@@ -22,9 +22,9 @@ resources:
       image: { get_param: image_id }
       flavor: { get_param: flavor_id }
       networks:
-        - port: { get_resource: server_port }
+        - port: { get_resource: node_port }
 
-  server_port:
+  node_port:
     type: OS::Neutron::Port
     properties:
       network_id: { get_param: network_id }
