--- a/infra-playbook.yaml
+++ b/infra-playbook.yaml
@@ -13,10 +13,10 @@
         openstack_password: "{{ lookup('env','OS_PASSWORD') }}"
         openstack_domain_name: "{{ lookup('env','OS_USER_DOMAIN_NAME') }}"
 
-        node_volume_name: {{node_volume_name | default("khrustalyov_infra_terra_ansible")}}
-        node_name: {{node_name | default("khrustalyov_infra_terra_ansible")}}
-        key_name: {{key_name}}
-        image_name: {{image_name}}
-        flavor_name: {{flavor_name}}
-        network_name: {{network_name}}
+        node_volume_name: "{{ node_volume_name | default('khrustalyov_infra_terra_ansible') }}"
+        node_name: "{{ node_name | default('khrustalyov_infra_terra_ansible') }}"
+        key_name: "{{ key_name }}"
+        image_name: "{{ image_name }}"
+        flavor_name: "{{ flavor_name }}"
+        network_name: "{{ network_name }}"
     register: infra_creation_out
