checking path fixed

--- a/infra-playbook.yaml
+++ b/infra-playbook.yaml
@@ -3,11 +3,11 @@
   connection: local
   tasks:
   - debug:
-      msg: "{{ lookup('env', 'HOME')+'/OpenSKey'+' '+'~' }}"
+      msg: "{{ lookup('env', 'HOME')+'/OpenSKey' }}"
   - shell: eval echo "~"
     register: tilda
   - debug:
-      msg: "{{ stdout.stdout_lines }}"
+      msg: "{{ tilda.stdout_lines }}"
   - name: create node
     terraform:
       force_init: True
