--- a/infra-playbook.yaml
+++ b/infra-playbook.yaml
@@ -33,6 +33,7 @@
       group: artstyle_nodes
       ansible_user: ubuntu
       ansible_ssh_private_key_file: "{{ lookup('env', 'HOME')+'/OpenSKey' }}"
+      ansible_ssh_common_args: "-o StrictHostKeyChecking=no"
       ansible_host: "{{ infra_creation_out.outputs.node_ip.value }}"
 
 - name: configure artstyle nodes
