--- a/infra-playbook.yaml
+++ b/infra-playbook.yaml
@@ -2,12 +2,6 @@
   hosts: 127.0.0.1
   connection: local
   tasks:
-  - debug:
-      msg: "{{ lookup('env', 'HOME')+'/OpenSKey' }}"
-  - shell: eval echo "~"
-    register: tilda
-  - debug:
-      msg: "{{ tilda.stdout_lines }}"
   - name: create node
     terraform:
       force_init: True
@@ -32,14 +26,13 @@
       name: "{{ infra_creation_out.outputs.node_ip.value }}"
       group: artstyle_nodes
       ansible_user: ubuntu
-      ansible_ssh_private_key_file: "{{ lookup('env', 'HOME')+'/OpenSKey' }}"
+      ansible_ssh_private_key_file: ~/OpenSKey
       ansible_ssh_common_args: "-o StrictHostKeyChecking=no"
-      ansible_host: "{{ infra_creation_out.outputs.node_ip.value }}"
 
 - name: configure artstyle nodes
   hosts: artstyle_nodes
   tasks:
     - name: update packages
       apt:
-        update_cach: yes
+        update_cache: yes
         upgrade: yes
