docker install scipt added

--- a/infra-playbook.yaml
+++ b/infra-playbook.yaml
@@ -37,3 +37,11 @@
       apt:
         update_cache: yes
         upgrade: yes
+    - name: download docker install script
+      uri:
+        url: https://get.docker.com
+      register: get_docker_response
+    - debug:
+        msg: "{{ get_docker_response.content }}"
+      #- name: install docker
+      
