--- a/infra-playbook.yaml
+++ b/infra-playbook.yaml
@@ -40,9 +40,7 @@
     - name: download docker install script
       uri:
         url: https://get.docker.com
-        return_content: True
-      register: get_docker_response
-    - debug:
-        msg: "{{ get_docker_response.content }}"
-      #- name: install docker
+        dest: ~/get-docker.sh
+    #- name: install docker
+
       
