mode argument added

--- a/infra-playbook.yaml
+++ b/infra-playbook.yaml
@@ -41,6 +41,7 @@
       get_url:
         url: https://get.docker.com
         dest: ~/get-docker.sh
+        mode: 755
     - name: install docker
       shell: ~/get-docker.sh
 
