--- a/infra-playbook.yaml
+++ b/infra-playbook.yaml
@@ -45,6 +45,7 @@
       become_user: ubuntu
     - name: install docker
       shell: ~/get-docker.sh
+      become_user: ubuntu
       become: True
 
 
