--- a/infra-playbook.yaml
+++ b/infra-playbook.yaml
@@ -42,6 +42,8 @@
         url: https://get.docker.com
         dest: ~/get-docker.sh
         mode: 777
+      become_user: ubuntu
+      become: True
     - name: install docker
       shell: ~/get-docker.sh
       become_user: ubuntu
