--- a/infra-playbook.yaml
+++ b/infra-playbook.yaml
@@ -41,9 +41,7 @@
       get_url:
         url: https://get.docker.com
         dest: ~/get-docker.sh
-        mode: 777
-      become_user: ubuntu
-      become: True
+        mode: "400"
     - name: install docker
       shell: ~/get-docker.sh
       become_user: ubuntu
