--- a/infra-playbook.yaml
+++ b/infra-playbook.yaml
@@ -32,6 +32,11 @@
 - name: configure artstyle nodes
   hosts: artstyle_nodes
   tasks:
+    - setup:
+      register: setup_status
+      until: setup_status is success
+      delay: 10
+      retries: 30
     - name: update packages
       apt:
         update_cache: yes
