--- a/infra-playbook.yaml
+++ b/infra-playbook.yaml
@@ -31,26 +31,44 @@
 
 - name: configure artstyle nodes
   hosts: artstyle_nodes
+  become: True
   tasks:
     - setup:
       register: setup_status
       until: setup_status is success
       delay: 10
       retries: 30
+
     - name: update packages
       apt:
         update_cache: yes
         upgrade: yes
-      become: True
+
     - name: download docker install script
       get_url:
         url: https://get.docker.com
         dest: ~/get-docker.sh
         mode: "0100"
-      become: True
+
     - name: install docker
       shell: ~/get-docker.sh
-      become: True
+
+    - name: check if docker group exists
+      command: getent group docker
+      register: docker_group
+      ignore_errors: true
+
+    - name: create docker group
+      group:
+        name: docker
+        state: present
+      when: docker_group.rc != 0
+
+    - name: add user 'ubuntu' to docker group
+      user:
+        name: ubuntu
+        groups: docker
+        append: yes
 
 
 
