--- a/infra-playbook.yaml
+++ b/infra-playbook.yaml
@@ -32,13 +32,14 @@
 - name: configure artstyle nodes
   hosts: artstyle_nodes
   become: True
-  tasks:
+  gather_facts: false
+  pre_tasks:
     - setup:
       register: setup_status
       until: setup_status is success
       delay: 10
       retries: 30
-
+  tasks:
     - name: update packages
       apt:
         update_cache: yes
