--- a/infra-playbook.yaml
+++ b/infra-playbook.yaml
@@ -26,7 +26,7 @@
       name: "{{ infra_creation_out.outputs.node_ip.value }}"
       group: artstyle_nodes
       ansible_user: ubuntu
-      ansible_ssh_key_file: ~/OpenSKey
+      ansible_ssh_private_key_file: ~/OpenSKey
       ansible_ssh_common_args: "-o StrictHostKeyChecking=no"
   - debug:
       var=hostvars
