--- a/infra-playbook.yaml
+++ b/infra-playbook.yaml
@@ -2,7 +2,7 @@
   hosts: 127.0.0.1
   connection: local
   tasks:
-  - name: create node
+  - name: create infrastructure
     terraform:
       force_init: True
       project_path: "./"
@@ -28,8 +28,7 @@
       ansible_user: ubuntu
       ansible_ssh_private_key_file: ~/OpenSKey
       ansible_ssh_common_args: "-o StrictHostKeyChecking=no"
-  - debug:
-      var=hostvars
+      
   - name: render arstyle nodes invenory file
     template:
       src: ./artstyle_nodes_temp.j2
